added David & Jonas

--- a/paper.tex
+++ b/paper.tex
@@ -121,8 +121,16 @@
             \ref{sec:sand},
             \ref{subsubsec:evaluation:fusionize_and_sand:results},
             \\
-        Jonas Heisterberg & \\
-        David Schmidt & \\
+        Jonas Heisterberg & 
+            \ref{sec:nuclio},
+            \ref{sec:profaastinate},
+            \ref{sec:eval-profaastinate}
+        \\
+        David Schmidt & 
+        \ref{sec:nuclio},
+        \ref{sec:profaastinate},
+        \ref{sec:eval-profaastinate}
+        \\
         Marvin Steinke & \makecell[l]{
             Abstract,
             \ref{sec:introduction},
